<resources>
    <string name="GIVE_READ_PHONE_STATE">请给与获取手机信息权限</string>
    <string name="VerificationSeekBar_1">Nhấn giữ và kéo sang hết bên phải</string>
    <string name="VerificationSeekBar_2">Thông qua xác nhận</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_manager_1">Đổi SĐT</string>
    <string name="account_manager_2">Đổi mật khẩu</string>
    <string name="account_manager_3">切换账号</string>
    <string name="account_manager_title">Quản lý tài khoản</string>
    <string name="action_settings">Settings</string>
    <string name="agreement">我已详细阅读并同意</string>
    <string name="agreement1">《用户协议》</string>
    <string name="agreement2">和</string>
    <string name="agreement3">《隐私保护指引》</string>
    <string name="agreement4">《儿童隐私保护指引》</string>
    <string name="alpha_number">0.5</string>
    <string name="app_back">返回</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_delete">删除</string>
    <string name="app_edit">编辑</string>
    <string name="app_find">查找</string>
    <string name="app_finish">完成</string>
    <string name="app_name">Siêu Anh Hùng Hội Tụ</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_ok">确定</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_save">保存</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_share">分享</string>
    <string name="app_tip">提示</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="bind_account">绑定账号</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="bind_error_account">只有游客账号才可以绑定账号!</string>
    <string name="bind_phone">绑定手机</string>
    <string name="bind_phone_password">密码:</string>
    <string name="btn_forget_password">Quên mật khẩu</string>
    <string name="btn_get_phone_code">Lấy mã OTP</string>
    <string name="btn_name_other">其他账号</string>
    <string name="btn_pay">支付</string>
    <string name="button_init">初始化</string>
    <string name="button_login">登录</string>
    <string name="button_quick_login">游客登录</string>
    <string name="button_quick_regist">快速注册</string>
    <string name="button_regist">注册</string>
    <string name="cancel">取消</string>
    <string name="certification_title">游客不提供实名认证服务，请注册或绑定账号</string>
    <string name="change_password">修改密码</string>
    <string name="change_phone">更换手机号只需要重新绑定一次</string>
    <string name="change_phone_1">Nhập SĐT ban đầu</string>
    <string name="change_phone_2">Nhập mã OTP</string>
    <string name="change_phone_3">Nhập SĐT mới</string>
    <string name="change_phone_4">Hãy xác nhận SĐT đã liên kết</string>
    <string name="change_phone_5">Hãy nhập mật khẩu hiện tại</string>
    <string name="change_phone_show_code">验证码:</string>
    <string name="change_phone_show_old_phone">原手机号:</string>
    <string name="change_phone_success">修改手机号成功</string>
    <string name="change_pwd_1">Đổi mật khẩu</string>
    <string name="change_pwd_10">Hãy nhập mật khẩu hiện tại</string>
    <string name="change_pwd_11">请用户确认待修改的密码</string>
    <string name="change_pwd_12">Mật khẩu không trùng khớp, hãy nhập lại</string>
    <string name="change_pwd_2">Lấy mã OTP</string>
    <string name="change_pwd_3">Tiếp theo</string>
    <string name="change_pwd_4">Xin người dùng sử dụng SĐT đã liên kết</string>
    <string name="change_pwd_5">Nhập SĐT</string>
    <string name="change_pwd_6">Nhập mã OTP</string>
    <string name="change_pwd_7">Nhập mật khẩu</string>
    <string name="change_pwd_8">Nhập mật khẩu</string>
    <string name="change_pwd_9">Xác nhận</string>
    <string name="change_pwd_success">Sửa mật khẩu thành công</string>
    <string name="checkCertfile">您还没有实名认证，请认证</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="code_send_success">Gửi OTP thành công</string>
    <string name="confirm_change_email">您已绑定手机，是否换绑？</string>
    <string name="confirm_change_phone">您已绑定手机，是否更换？</string>
    <string name="confirm_text">根据相关规定,账号需要通过实名认证后才可进行游戏。实名信息绝对保密，不会对外泄露。</string>
    <string name="confirm_text1">尊敬的用户：\n根据国家规定，游戏用户需要进行实名认证。信息仅用于认证且绝对保密，未成年人游戏支付额度有限制</string>
    <string name="confirm_text3">●信息仅用于认证且绝对保密</string>
    <string name="confirm_text4">●未成年人游戏支付额度有限制</string>
    <string name="confirm_title_1">通行证</string>
    <string name="continue_game">继续游戏</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_phone_1">Nhập SĐT (Lần đầu login sẽ đăng ký tài khoản mới</string>
    <string name="edit_phone_2">Nhập mã OTP</string>
    <string name="edit_user_name">Tài khoản/Số điện thoại</string>
    <string name="edit_user_password">Nhập mật khẩu</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="enter_email_null_error">邮箱号码不能为空</string>
    <string name="enter_phone_formet_error">手机号码格式不正确</string>
    <string name="enter_phone_null_error">手机号码不能為空</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="find_password">Tìm mật khẩu</string>
    <string name="find_password_account_confirm">我的账号</string>
    <string name="find_password_account_confirm_hint">请输入您的用户名</string>
    <string name="find_password_account_email">联系邮箱</string>
    <string name="find_password_account_email_btn_text">发送邮件</string>
    <string name="find_password_account_email_hint">请输入您的绑定邮箱地址</string>
    <string name="find_password_button">Tìm mật khẩu</string>
    <string name="find_password_button_text">修改密碼</string>
    <string name="find_password_by_email">通过邮箱</string>
    <string name="find_password_by_email_title">通过邮箱找回</string>
    <string name="find_password_by_helper">通过客服</string>
    <string name="find_password_by_helper1">Tìm lại bằng liên hệ CSKH</string>
    <string name="find_password_by_helper2">Anh Hùng thân mến, nếu gặp phải vấn đề thất bại khi xác nhận tài khoản qua SĐT, có thể cung cấp thông tin SĐT tài khoản và lịch sử nạp tiền cho nhân viên quản lí ở Group chính thức trên Facebook</string>
    <string name="find_password_by_phone">通过手机</string>
    <string name="find_password_by_phone1">Tìm lại bằng SĐT liên kết</string>
    <string name="find_password_by_phone_title">Tìm lại bằng SĐT liên kết</string>
    <string name="find_password_code_text_hiny">手机验证码</string>
    <string name="find_password_confirm_num">验证码</string>
    <string name="find_password_confirm_num_hint">Nhập mã OTP</string>
    <string name="find_password_email">邮箱</string>
    <string name="find_password_email_num">邮箱号:</string>
    <string name="find_password_ems_des">短信验证码</string>
    <string name="find_password_ems_des_hint">请输入短信验证码</string>
    <string name="find_password_get_code_des">Lấy mã OTP</string>
    <string name="find_password_has_bind_email">请输入您已经绑定的邮箱</string>
    <string name="find_password_has_bind_phone">请输入您已经绑定的手机</string>
    <string name="find_password_helper">客服</string>
    <string name="find_password_new_psw">新密码:</string>
    <string name="find_password_new_psw_confirm">新密码确认</string>
    <string name="find_password_new_psw_confirm_hint">请再次输入新密码</string>
    <string name="find_password_new_psw_hint">请输入新密码</string>
    <string name="find_password_old_account">账号:</string>
    <string name="find_password_phone">手机</string>
    <string name="find_password_phone_num">手机号:</string>
    <string name="find_password_phone_num_hint">请输入手机号码</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_datetime">M月d日 %skk:mm</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_iap_err">网络连接不可用，请稍候重试</string>
    <string name="fmt_in60min">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_longtime">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="force_bind_phone_1">手机绑定</string>
    <string name="force_bind_phone_2">为了您的账户安全，请及时绑定手机</string>
    <string name="forget_password_hint">忘记密码&gt;&gt;</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="func_error_in_dev">功能开发中!</string>
    <string name="get_access_token_fail">获取access token失败，原因%s</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="get_prepayid_fail">获取prepayid失败，原因%s</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="hello_world">Hello world!</string>
    <string name="idenfity_button">验证</string>
    <string name="idenfity_hint">身份证号码</string>
    <string name="idenfity_is_error">您输入的身份证号码有误，请重新输入</string>
    <string name="init_error">初始化失败</string>
    <string name="input_openid">输入openid</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_scope">输入scope</string>
    <string name="quit_game">残忍退出</string>
    <string name="quit_tile">亲，确定要退出吗？</string>
    <string name="tex_idenfity">实名认证</string>
    <string name="truename_hint">姓名</string>
    <string name="write_comfire">Xác nhận</string>
</resources>