<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:drop="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/w_h_full">
    <RelativeLayout
        android:background="@drawable/sdk_ui_bg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/dialog_fit2">
        <Button
            android:id="@+id/pwd_close"
            android:background="@drawable/sdk_ui_back1"
            android:layout_width="30dp"
            android:layout_height="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="250dp"
            android:layout_height="33dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/sdk_ui_bg1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="230dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="42dp"
            android:src="@drawable/sdk_ui_bg_enter1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleY="1.1"/>
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="230dp"
            android:layout_height="22dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:textColor="#ff000000"
                android:gravity="center"
                android:id="@+id/textView1"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/find_password_old_account"/>
            <EditText
                android:textSize="@dimen/login_username_hint"
                android:textColor="#ff000000"
                android:textColorHint="#c3c3c8"
                android:layout_gravity="center_vertical"
                android:id="@+id/user_name"
                android:background="@drawable/edittext_bg"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:hint="@string/find_password_account_confirm_hint"
                android:singleLine="true"
                android:maxLength="21"
                android:inputType="textFilter"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="230dp"
            android:layout_height="25dp"
            android:layout_marginTop="74dp"
            android:src="@drawable/sdk_ui_bg_enter1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleY="1.1"/>
        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="22dp"
            android:layout_marginTop="76dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:textColor="#ff000000"
                android:gravity="center"
                android:id="@+id/textView8"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/find_password_email_num"/>
            <EditText
                android:textSize="@dimen/login_username_hint"
                android:typeface="normal"
                android:textColorHint="#c3c3c8"
                android:layout_gravity="center_vertical"
                android:id="@+id/enter_email"
                android:background="@drawable/edittext_bg"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:hint="@string/find_password_has_bind_email"
                android:singleLine="true"
                android:maxLength="21"
                android:inputType="text"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="230dp"
            android:layout_height="25dp"
            android:layout_marginTop="106dp"
            android:src="@drawable/sdk_ui_bg_enter1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleY="1.1"/>
        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="22dp"
            android:layout_marginTop="108dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:textColor="#ff000000"
                android:gravity="center"
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/find_password_new_psw"/>
            <EditText
                android:textSize="@dimen/login_username_hint"
                android:typeface="normal"
                android:textColorHint="#c3c3c8"
                android:layout_gravity="center_vertical"
                android:id="@+id/new_password"
                android:background="@drawable/edittext_bg"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:hint="@string/find_password_new_psw_hint"
                android:singleLine="true"
                android:maxLength="21"
                android:inputType="textPassword"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/sdk_ui_game"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="23dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="138dp">
            <EditText
                android:textSize="@dimen/cerented_szie"
                android:gravity="center"
                android:id="@+id/identfying_code"
                android:background="@drawable/edittext_bg1"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:hint="@string/find_password_confirm_num"
                android:inputType="textFilter"/>
            <Button
                android:textSize="@dimen/cerented_szie"
                android:textColor="#ffffffff"
                android:id="@+id/get_code"
                android:background="@drawable/sdk_button_yellow"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/find_password_get_code_des"/>
        </LinearLayout>
        <Button
            android:textSize="@dimen/dialog_text_des_size"
            android:textColor="#ffffffff"
            android:id="@+id/find_password"
            android:background="@drawable/sdk_button_hui"
            android:layout_width="120dp"
            android:layout_height="23dp"
            android:layout_marginBottom="6dp"
            android:text="@string/find_password_button_text"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
