<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:drop="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@null"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/w_h_full">
    <RelativeLayout
        android:background="@drawable/sdk_ui_bg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/dialog_kqg_login">
        <ImageView
            android:layout_width="39dp"
            android:layout_height="45.75dp"
            android:layout_marginLeft="18.5dp"
            android:layout_marginTop="13.5dp"
            android:src="@drawable/sdk_logo"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#ff000000"
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tex_idenfity"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="1.5dp"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/sdk_line01"
            android:layout_below="@+id/title_name"
            android:layout_alignLeft="@+id/title_name"/>
        <EditText
            android:textSize="16sp"
            android:textColor="#ff000000"
            android:textColorHint="#9e9e9e"
            android:id="@+id/edit_true_name"
            android:background="@drawable/edittext_bg"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="78.5dp"
            android:hint="@string/truename_hint"
            android:singleLine="true"
            android:maxLength="21"
            android:layout_centerHorizontal="true"
            android:inputType="textFilter"/>
        <ImageView
            android:layout_width="329.5dp"
            android:layout_height="1dp"
            android:src="@drawable/sdk_line02"
            android:layout_alignBottom="@+id/edit_true_name"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:textSize="16sp"
            android:textColor="#ff000000"
            android:textColorHint="#9e9e9e"
            android:id="@+id/edit_identify"
            android:background="@drawable/edittext_bg"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="138.5dp"
            android:hint="@string/idenfity_hint"
            android:singleLine="true"
            android:maxLength="20"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:imeOptions="actionDone"/>
        <ImageView
            android:layout_width="329.5dp"
            android:layout_height="1dp"
            android:src="@drawable/sdk_line02"
            android:layout_alignBottom="@+id/edit_identify"
            android:layout_centerHorizontal="true"/>
        <Button
            android:textSize="18sp"
            android:textColor="#ffffffff"
            android:id="@+id/btn_idenfity"
            android:background="@drawable/sdk_btn01"
            android:layout_width="117dp"
            android:layout_height="36.75dp"
            android:layout_marginTop="17dp"
            android:text="@string/write_comfire"
            android:layout_below="@+id/edit_identify"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="#ff787878"
            android:id="@+id/textView1"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_text"
            android:layout_below="@+id/btn_idenfity"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
