<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/w_h_full">
    <RelativeLayout
        android:background="@drawable/sdk_ui_bg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/dialog_kqg_login">
        <ImageView
            android:layout_width="39dp"
            android:layout_height="45.75dp"
            android:layout_marginLeft="18.5dp"
            android:layout_marginTop="13.5dp"
            android:src="@drawable/sdk_logo"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#ff000000"
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/change_pwd_1"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="1.5dp"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/sdk_line01"
            android:layout_below="@+id/title_name"
            android:layout_alignLeft="@+id/title_name"/>
        <Button
            android:id="@+id/pwd_close"
            android:background="@drawable/sdk_x01_img"
            android:layout_width="33.75dp"
            android:layout_height="33.75dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>
        <EditText
            android:textSize="16sp"
            android:textColor="#ff000000"
            android:textColorHint="#9e9e9e"
            android:id="@+id/edit_old_phone"
            android:background="@drawable/edittext_bg"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="78.5dp"
            android:hint="@string/change_pwd_7"
            android:singleLine="true"
            android:maxLength="21"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"/>
        <ImageView
            android:layout_width="329.5dp"
            android:layout_height="1dp"
            android:src="@drawable/sdk_line02"
            android:layout_alignBottom="@+id/edit_old_phone"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:textSize="16sp"
            android:textColor="#ff000000"
            android:textColorHint="#9e9e9e"
            android:id="@+id/identfying_code"
            android:background="@drawable/edittext_bg"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="138.5dp"
            android:hint="@string/change_pwd_8"
            android:singleLine="true"
            android:maxLength="20"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>
        <ImageView
            android:layout_width="329.5dp"
            android:layout_height="1dp"
            android:src="@drawable/sdk_line02"
            android:layout_alignBottom="@+id/identfying_code"
            android:layout_centerHorizontal="true"/>
        <Button
            android:textColor="#ffffffff"
            android:id="@+id/sure_bt"
            android:background="@drawable/sdk_btn01"
            android:layout_width="117dp"
            android:layout_height="40.5dp"
            android:layout_marginTop="200dp"
            android:text="@string/change_pwd_9"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="15sp"
            android:textColor="#585858"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/change_pwd_10"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
