<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:drop="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@null"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/w_h_full">
    <RelativeLayout
        android:background="@drawable/sdk_ui_confirm_change_bg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/dialog_fit4">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/sdk_ui_game"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="#ffffffff"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/confirm_change_email"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:layout_marginBottom="13dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <Button
                android:textColor="#ffffffff"
                android:id="@+id/cancel"
                android:background="@drawable/sdk_button_yellow"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/cancel"/>
            <Button
                android:textColor="#ffffffff"
                android:id="@+id/sure"
                android:background="@drawable/sdk_button_yellow"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:text="@string/write_comfire"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
