<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:drop="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@null"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/w_h_full">
    <RelativeLayout
        android:background="@drawable/sdk_ui_exit_bg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/dialog_fit5">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/sdk_ui_kqg"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="@dimen/dialog_text_size"
            android:textColor="#ff585858"
            android:gravity="center"
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/quit_tile"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="28dp"
            android:layout_marginBottom="14dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <Button
                android:textSize="@dimen/dialog_text_des_size"
                android:textColor="#ffffffff"
                android:id="@+id/cancel_quit"
                android:background="@drawable/sdk_btn01"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:text="@string/continue_game"/>
            <Button
                android:textSize="@dimen/dialog_text_des_size"
                android:textColor="#ffffffff"
                android:id="@+id/quit_game"
                android:background="@drawable/sdk_btn01"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:text="@string/quit_game"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
